--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -5,55 +5,78 @@
   position: relative;
   overflow: hidden;
 
+  .banner {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    background-color: #fcebeb;
+  }
 
-.banner {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  background-color: #fcebeb;
-}
+  .image-container {
+    height: 100%;
+    flex: 1;
 
-.image-container {
-  height: 100%;
-  flex: 1;
+    & img {
+      height: 80%;
+    }
+  }
 
-  & img {
-    height: 80%;
+  .info-container {
+    flex: 1;
+    padding: 50px;
+
+    & h2.banner-title {
+      font-size: 70px;
+    }
+
+    & p.banner-description {
+      margin: 50px 0px;
+      font-size: 20px;
+      font-weight: 500;
+      letter-spacing: 3px;
+    }
+
+    & a.banner-button {
+      padding: 10px;
+      font-size: 20px;
+      background-color: transparent;
+      cursor: pointer;
+      text-decoration: none;
+      color: black;
+      border: 1px solid gray;
+    }
   }
 }
 
-.info-container{
-  flex: 1;
-  padding: 50px;
+/* -- LANDSCAPE ONLY  -- */
+@media (min-width: 1024px) and (max-width: 1179px) {
+  .banner-container {
+    .info-container {
+      padding: 5px;
+    }
 
-  & h2.banner-title{
-    font-size: 70px;
-  }
-
-  & p.banner-description{
-    margin: 50px 0px;
-    font-size: 20px;
-    font-weight: 500;
-    letter-spacing: 3px;
-  }
-
-  & a.banner-button{
-    padding: 10px;
-    font-size: 20px;
-    background-color: transparent;
-    cursor: pointer;
-    text-decoration: none;
-    color: black;
-    border: 1px solid gray;
+    .image-container {
+      height: 80%;
+    }
   }
 }
 
+/* -- PORTRAIT ONLY -- */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .banner-container {
+    .info-container {
+      display: none;
+    }
+    .image-container {
+      height: 80%;
+    }
+  }
 }
 
 /* -- Mobile ONLY -- */
 @media (max-width: 767px) {
   .banner-container {
-    display: "none";
+    display: none;
   }
 }
