--- a/src/components/SuccessBanner/SuccessBanner.scss
+++ b/src/components/SuccessBanner/SuccessBanner.scss
@@ -1,11 +1,11 @@
-.banner-containers {
+.s-banner-containers {
   width: 100%;
   height: 100vh;
   display: flex;
   position: relative;
   overflow: hidden;
 
-  .banners {
+  .s-banners {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -13,7 +13,7 @@
     background-color: #e0fbe2;
   }
 
-  .image-containers {
+  .s-image-containers {
     height: 100%;
     flex: 1;
 
@@ -22,15 +22,15 @@
     }
   }
 
-  .info-containers {
+  .s-info-containers {
     flex: 1;
     padding: 50px;
 
-    & h2.banner-titles {
+    & h2.s-banner-titles {
       font-size: 70px;
     }
 
-    & p.banner-descriptions {
+    & p.s-banner-descriptions {
       margin: 50px 0px;
       font-size: 20px;
       font-weight: 500;
@@ -39,9 +39,40 @@
   }
 }
 
+/* -- LANDSCAPE ONLY  -- */
+@media (min-width: 1024px) and (max-width: 1179px) {
+  .s-banner-containers {
+    .s-info-containers {
+      padding: 5px;
+    }
+
+    .s-image-containers {
+      height: 80%;
+    }
+  }
+}
+
+/* -- PORTRAIT ONLY -- */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .s-banner-containers {
+    .s-info-containers {
+      padding: 5px;
+    }
+
+    .s-image-containers {
+      height: 80%;
+    }
+  }
+}
+
 /* -- Mobile ONLY -- */
 @media (max-width: 767px) {
-  .banner-container {
-    display: "none";
+  .s-banner-containers {
+    .s-info-containers {
+      padding: 0px;
+    }
+    .s-image-containers {
+      display: none;
+    }
   }
 }
